@@ -32,6 +32,8 @@ Version 1.3.2
 5674							: Treating file as folder in repobrowser
 5724							: last line scrolling
 5735							: crash with invalid patchfiles
+5753							: don't crawl excluded paths
+5758							: "copy to working copy" in repobrowser at HEAD
 
 Version 1.3.1
 5434							: Apply a patch in non ANSI or non UTF8 encoding
