@@ -176,6 +176,9 @@ void CFolderCrawler::WorkerThread()
 				}
 				if ((!m_blockedPath.IsEmpty())&&(m_blockedPath.IsAncestorOf(workingPath)))
 					continue;
+				// don't crawl paths that are exluded
+				if (!CSVNStatusCache::Instance().IsPathAllowed(workingPath))
+					continue;
 				// check if the changed path is inside an .svn folder
 				if ((workingPath.HasAdminDir()&&workingPath.IsDirectory())||workingPath.IsAdminDir())
 				{
