@@ -33,6 +33,9 @@ Version 1.3.2
        lead to the file being treated as a folder. (Stefan)
 - BUG: The last line wasn't always visible after an operation without
        manually scrolling. (Stefan)
+- BUG: The "copy to working copy" context menu in the repository browser
+       was only shown if multiple files were selected or the
+       repository browser wasn't at HEAD. (Stefan)
 
 Version 1.3.1
 - BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
